HTMLの基礎を形成

--- a/index.html
+++ b/index.html
@@ -2,9 +2,39 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <title>TOP</title>
+    <link href="css/base.css" rel="stylesheet">
+    <title>情報連携学部の科目群</title>
   </head>
   <body>
-    <h1>トップページです</h1>
+    <div id="headline">
+      <h1>情報連携学部の７つの科目群</h1>
+    </div>
+    <div id="explanation">
+      <p>INIADでは入学直後から、世界中で使われているプログラミング言語「Python」と、Webの標準言語「HTML」「CSS」「JavaScript」を学びます。これらの基本スキルをもとに、ソースプログラム管理システム「Git」を用いたチームでのWebサービス開発や、Pythonによるデータ解析やAI活用の基礎を2 年次までに全員が習得します。</p>
+      <p>2年生からは、INIADが提供する5つの情報科目群（コンピュータ・システム、コンピュータ・ソフトウェア、ユーザ・エクスペリエンス、データサイエンス、ICT社会応用）及び2つの連携科目群（ビジネス構築、コミュニティ形成）の7つの科目群から情報科目群を含む2つを選択し、専門科目を学習します。</p>
+    </div>
+    <div id="main">
+      <div class="sub">
+        <h2>情報科目群</h2>
+      </div>
+      <div class="example">
+        <ul>
+          <li>コンピュータ・システム</li>
+          <li><a href="subpage.html">コンピュータ・ソフトウェア</a></li>
+          <li>ユーザ・エクスペリエンス</li>
+          <li>データサイエンス</li>
+          <li>ICT社会応用</li>
+        </ul>
+      </div>
+      <div class="sub">
+        <h2>連携科目群</h2>
+      </div>
+      <div class="example">
+        <ul>
+          <li>ビジネス構築</li>
+          <li>コミュニティ形成</li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
