--- a/subpage.html
+++ b/subpage.html
@@ -2,9 +2,52 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <title>SUB</title>
+    <link href="css/base.css" rel="stylesheet">
+    <title>コンピュータ・ソフトウェア科目群</title>
   </head>
   <body>
-    <h1>サブページです</h1>
+    <div id="headline">
+      <h1>コンピュータ・ソフトウェア科目群</h1>
+    </div>
+    <div id="explanation">
+      <p>DXを実現するためには、社会のさまざまな課題を分析し、それを解決する情報サービスを設計・開発できることが必要になります。さらに変化の早い現代においては、情報サービスを迅速に立ち上げ継続的に発展させることが期待され、そのためのソフトウェア開発手法を身につけることも求められます。コンピュータ・ソフトウェア科目群では、モダンな情報サービスの設計・開発を行うための知識・スキルを身につけます。</p>
+    </div>
+    <div id="main">
+      <div class="sub">
+        <h2>2年次必修</h2>
+      </div>
+      <div class="example">
+        <ul>
+          <li>アルゴリズムとデータ構造</li>
+          <li>データベース</li>
+          <li>コンピュータ・ソフトウェア演習Ⅰ</li>
+          <li>コンピュータ・ソフトウェア演習Ⅱ</li>
+        </ul>
+      </div>
+      <div class="sub">
+        <h2>3年次必修</h2>
+      </div>
+      <div class="example">
+        <ul>
+          <li>ソフトウェア・エンジニアリング</li>
+          <li>サイバーセキュリティ</li>
+          <li>コンピュータ・ソフトウェア演習Ⅲ</li>
+          <li>コンピュータ・ソフトウェア演習Ⅳ</li>
+        </ul>
+      </div>
+      <div class="sub">
+        <h2>2~4年次選択</h2>
+      </div>
+      <div class="example">
+        <ul>
+          <li>コンピュータ・ソフトウェア論A</li>
+          <li>コンピュータ・ソフトウェア論B</li>
+          <li>コンピュータ・ソフトウェア論C</li>
+          <li>コンピュータ・ソフトウェア論D</li>
+          <li>コンピュータ・ソフトウェア論E</li>
+          <li>コンピュータ・ソフトウェア論F</li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
