--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <ul>
           <li><a href="subpage2.html">コンピュータ・システム</a></li>
           <li><a href="subpage.html">コンピュータ・ソフトウェア</a></li>
-          <li>ユーザ・エクスペリエンス</li>
+          <li><a href="subpage5.html">ユーザ・エクスペリエンス</a></li>
           <li>データサイエンス</li>
           <li>ICT社会応用</li>
         </ul>
@@ -31,7 +31,7 @@
       </div>
       <div class="example">
         <ul>
-          <li>ビジネス構築</li>
+          <li><a href="subpage3.html">ビジネス構築</a></li>
           <li><a href="subpage4.html">コミュニティ形成</a></li>
         </ul>
       </div>
