SW科目群の科目にシラバスへのリンクを追加

--- a/subpage.html
+++ b/subpage.html
@@ -18,9 +18,9 @@
       </div>
       <div class="example">
         <ul>
-          <li>アルゴリズムとデータ構造</li>
+          <li><a href="https://g-sys.toyo.ac.jp/syllabus/html/gakugai/2023/2023_164728.html?numbering=">アルゴリズムとデータ構造</a></li>
           <li>データベース</li>
-          <li>コンピュータ・ソフトウェア演習Ⅰ</li>
+          <li><a href="https://g-sys.toyo.ac.jp/syllabus/html/gakugai/2023/2023_164752.html?numbering=">コンピュータ・ソフトウェア演習Ⅰ</a></li>
           <li>コンピュータ・ソフトウェア演習Ⅱ</li>
         </ul>
       </div>
@@ -40,9 +40,9 @@
       </div>
       <div class="example">
         <ul>
-          <li>コンピュータ・ソフトウェア論A</li>
+          <li><a href="https://g-sys.toyo.ac.jp/syllabus/html/gakugai/2023/2023_164739.html?numbering=">コンピュータ・ソフトウェア論A</a></li>
           <li>コンピュータ・ソフトウェア論B</li>
-          <li>コンピュータ・ソフトウェア論C</li>
+          <li><a href="https://g-sys.toyo.ac.jp/syllabus/html/gakugai/2023/2023_164715.html?numbering=">コンピュータ・ソフトウェア論C</a></li>
           <li>コンピュータ・ソフトウェア論D</li>
           <li>コンピュータ・ソフトウェア論E</li>
           <li>コンピュータ・ソフトウェア論F</li>
