コミュニティ形成科目群の詳細ページを追加

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="example">
         <ul>
           <li>ビジネス構築</li>
-          <li>コミュニティ形成</li>
+          <li><a href="subpage4.html">コミュニティ形成</a></li>
         </ul>
       </div>
     </div>
