--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
           <li><a href="subpage2.html">コンピュータ・システム</a></li>
           <li><a href="subpage.html">コンピュータ・ソフトウェア</a></li>
           <li>ユーザ・エクスペリエンス</li>
-          <li>データサイエンス</li>
-          <li>ICT社会応用</li>
+          <li><a href="subpage5.html">データサイエンス</a></li>
+          <li><a href="subpage6.html">ICT社会応用</a></li>
         </ul>
       </div>
       <div class="sub">
